<resources>
    <string name="app_name">Ruta+</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Correo">Correo</string>
    <string name="CARGANDO">Cargando…</string>
    <string name="INICIAR_ENTREGAS">Iniciar Entregas</string>
    <string name="x_paquetes">%1$s Paquetes</string>
    <string name="logoContentDescription">Logo</string>
    <string name="motivo_de_fallo">Motivo de fallo</string>
    <string name="ver_en_el_mapa">Ver en el mapa</string>
    <string name="escanear_caja">Escanear Caja</string>
    <string name="codigo_del_paquete">Codigo del paquete:</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="listado_de_cargas">Listado de Cargas</string>
    <string name="entregar_paquete">Entregar paquete</string>
    <string name="paquete">Paquete:</string>
    <string name="recibe">Recibe:</string>
    <string name="telefono">Telefono:</string>
    <string name="terminar_entregas">Terminar entregas</string>
    <string name="ruta">Ruta:</string>
    <string name="coincide_el_receptor">¿Coincide el receptor?</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_del_receptor">Nombre del receptor</string>
    <string name="rut">RUT:</string>
    <string name="rut_del_receptor">RUT del receptor</string>
    <string name="tel_fono_del_receptor">Teléfono del receptor</string>
    <string name="confirmar_entrega">Confirmar entrega</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="alinea_el_codigo">Alinea el código dentro del marco</string>
    <string name="ingresar_manualmente">Ingresar manualmente</string>
    <string name="escanea_el_codigo">Escanea el código de barras</string>
    <string name="entrega_faliida">Entrega faliida?</string>
    <string name="registrar_entrega_fallida">Registrar entrega fallida</string>
    <string name="explicacion_motivo_fallo">Este mensaje será mostrado tanto como al supervisor como a la persona que quiera rastrear el código de este pedido</string>
    <string name="registrar_fallo">Registrar Fallo</string>
    <string name="referencia">Referencia:</string>
</resources>
