<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantallaReparto.fragments.entregarPaquete.EntregarPaqueteFragment">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/entregar_paquete"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPaquete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/paquete"
        app:layout_constraintEnd_toStartOf="@id/tvPaqueteCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />

    <TextView
        android:id="@+id/tvPaqueteCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvPaquete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPaquete"
        app:layout_constraintTop_toTopOf="@+id/tvPaquete"
        tools:text="1234567890123" />

    <TextView
        android:id="@+id/tvRecibe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/recibe"
        app:layout_constraintEnd_toStartOf="@id/tvRecibeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPaquete" />

    <TextView
        android:id="@+id/tvRecibeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvRecibe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRecibe"
        app:layout_constraintTop_toTopOf="@+id/tvRecibe"
        tools:text="Juanito perez" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/telefono"
        app:layout_constraintEnd_toStartOf="@id/tvTelefonoValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecibe" />

    <TextView
        android:id="@+id/tvTelefonoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTelefono"
        app:layout_constraintTop_toTopOf="@+id/tvTelefono"
        tools:text="912345678" />

    <TextView
        android:id="@+id/tvReferencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/referencia"
        app:layout_constraintEnd_toStartOf="@id/tvReferenciaValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTelefono" />

    <TextView
        android:id="@+id/tvReferenciaValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvReferencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvReferencia"
        app:layout_constraintTop_toTopOf="@+id/tvReferencia"
        tools:text="Casa roja" />


    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:paddingHorizontal="15dp"
        android:text="@string/escanear_caja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReferencia" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seccionValidada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnValidar">

        <!-- CheckBox para "¿Coincide el receptor?" -->
        <android.widget.CheckBox
            android:id="@+id/checkboxReceptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coincide_el_receptor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TextView para el nombre -->
        <android.widget.TextView
            android:id="@+id/textViewNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/editTextNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkboxReceptor"
            app:layout_constraintWidth_percent="0.3" />

        <!-- EditText para ingresar el nombre -->
        <android.widget.EditText
            android:id="@+id/editTextNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:hint="@string/nombre_del_receptor"
            app:layout_constraintBottom_toBottomOf="@id/textViewNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewNombre"
            app:layout_constraintTop_toTopOf="@id/textViewNombre" />

        <!-- TextView para el RUT -->
        <android.widget.TextView
            android:id="@+id/textViewRut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rut"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/editTextRut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNombre"
            app:layout_constraintWidth_percent="0.3" />

        <!-- EditText para ingresar el RUT -->
        <android.widget.EditText
            android:id="@+id/editTextRut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:hint="@string/rut_del_receptor"
            app:layout_constraintBottom_toBottomOf="@id/textViewRut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewRut"
            app:layout_constraintTop_toTopOf="@id/textViewRut" />

        <!-- TextView para el teléfono -->
        <android.widget.TextView
            android:id="@+id/textViewTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tel_fono"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTelefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRut"
            app:layout_constraintWidth_percent="0.3" />

        <!-- EditText para ingresar el teléfono -->
        <android.widget.EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:hint="@string/tel_fono_del_receptor"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTelefono"
            app:layout_constraintTop_toTopOf="@+id/textViewTelefono" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            tools:text="Error, necesitas hacer algo?..."
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConfirmarEntrega"/>
        <!-- Botón "Confirmar entrega" -->
        <android.widget.Button
            android:id="@+id/btnConfirmarEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:paddingHorizontal="20dp"
            android:text="@string/confirmar_entrega"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvError" />

        <android.widget.Button
            android:id="@+id/btnEntregaFallida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_danger"
            android:paddingHorizontal="20dp"
            android:text="@string/entrega_faliida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnConfirmarEntrega" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>