<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/orange_background"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logoContentDescription"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/logo"/>
    <!-- Campo de correo electrónico -->

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawablePadding="8dp"

        android:hint="@string/Correo"

        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#FF000000"
        android:textColorHint="#9E9E9E" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawablePadding="8dp"
        android:hint="@string/Contraseña"

        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#FF000000"
        android:textColorHint="#9E9E9E" />

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange_button"
        android:padding="12dp"
        android:text="@string/Ingresar"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="gone" />


</LinearLayout>
